<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="ru.proghouse.robocam.GlobalSettingsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ActionBar"
        android:baselineAligned="false"
        android:weightSum="1"
        android:measureWithLargestChild="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ActionBar"
            android:baselineAligned="false">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButtonBack"
                android:src="@drawable/back"
                style="@style/Widget.AppCompat.ActionButton"
                android:onClick="onCancelButtonClick" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ActionBar"
            android:baselineAligned="false"
            android:layout_weight="1"
            android:gravity="right">
            <Button
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/buttonCancel"
                android:onClick="onCancelButtonClick"
                android:focusable="false" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageView8"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/spacer_small"
                android:paddingTop="4dp"
                android:paddingBottom="4dp" />

            <Button
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/buttonSave"
                android:onClick="onSaveButtonClick"
                android:focusable="false" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <TextView
                android:text="@string/pref_title_server"
                android:id="@+id/titleServer"
                style="@style/SettingsSectionTitle" />

            <CheckBox
                style="@style/SettingsCheckBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/pref_item_height"
                android:text="@string/use_local_controls"
                android:id="@+id/checkBoxUseLocalControls"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:id="@+id/linearLayoutLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="0dp">

                <CheckBox
                    style="@style/SettingsCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/pref_item_height"
                    android:text="@string/maхimize_joysticks"
                    android:id="@+id/checkBoxMaximizeJoysticks"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayoutServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="0dp">

                <TextView
                    android:id="@+id/titleCamera"
                    style="@style/SettingsSectionTitle"
                    android:text="@string/camera" />

                <Spinner
                    android:id="@+id/spinnerCamera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:spinnerMode="dialog"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/spacer_small" />

                <Spinner
                    android:id="@+id/spinnerPreviewSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:spinnerMode="dialog"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/spacer_small" />

                <TextView
                    android:id="@+id/textViewJpegQuality1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="11dp"
                    android:paddingTop="6dp"
                    android:text="@string/jpeg_quality"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <SeekBar
                    android:id="@+id/seekBarJpegQuality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:progress="60" />

                <TextView
                    android:id="@+id/textViewJpegQuality2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="6dp"
                    android:paddingLeft="11dp"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <ImageView
                    android:id="@+id/imageViewUseRenderScript"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/spacer_small" />

                <CheckBox
                    android:id="@+id/checkBoxUseRenderScript"
                    style="@style/SettingsCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/pref_item_height"
                    android:text="@string/use_render_script"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/titleSecurity"
                    style="@style/SettingsSectionTitle"
                    android:text="@string/security" />

                <TextView
                    android:id="@+id/textViewDriverName"
                    style="@style/SettingsSectionEditTextTitle"
                    android:text="@string/driver_name" />

                <EditText
                    android:id="@+id/editTextDriverName"
                    style="@style/SettingsEditText" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/spacer_small" />

                <TextView
                    android:id="@+id/textViewDriverPassword"
                    style="@style/SettingsSectionEditTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="11dp"
                    android:paddingTop="6dp"
                    android:text="@string/driver_password"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/editTextDriverPassword"
                    style="@style/SettingsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/spacer_small" />

                <CheckBox
                    android:id="@+id/checkBoxAllowSpectators"
                    style="@style/SettingsCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/pref_item_height"
                    android:text="@string/allow_spectators"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/spacer_small" />

                <TextView
                    android:id="@+id/textViewSpectatorName"
                    style="@style/SettingsSectionEditTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="11dp"
                    android:paddingTop="6dp"
                    android:text="@string/spectator_name"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/editTextSpectatorName"
                    style="@style/SettingsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:inputType="none"
                    android:lines="1"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:singleLine="true" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/spacer_small" />

                <TextView
                    android:id="@+id/textViewSpectatorPassword"
                    style="@style/SettingsSectionEditTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="11dp"
                    android:paddingTop="6dp"
                    android:text="@string/spectator_password"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/editTextSpectatorPassword"
                    style="@style/SettingsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
